--- a/splitemapp-android/pom.xml
+++ b/splitemapp-android/pom.xml
@@ -28,6 +28,11 @@
 		<!-- Dependencies version -->
 		<maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
 		<ormlite.version>4.48</ormlite.version>
+		<javax.persistence.version>1.0.2</javax.persistence.version>
+		<springframework.android.version>1.0.1.RELEASE</springframework.android.version>
+		<fasterxml.jackson.core.version>2.4.3</fasterxml.jackson.core.version>
+		<robolectric.version>2.4</robolectric.version>
+		<junit.version>4.11</junit.version>
 	</properties>
 
 	<!-- We need a local repository for appcompat since it's not yet in maven 
@@ -70,19 +75,33 @@
 		<dependency>
 			<groupId>javax.persistence</groupId>
 			<artifactId>persistence-api</artifactId>
-			<version>1.0.2</version>
+			<version>${javax.persistence.version}</version>
 		</dependency>
 
 		<!-- Rest Service Dependencies -->
 		<dependency>
 			<groupId>org.springframework.android</groupId>
 			<artifactId>spring-android-rest-template</artifactId>
-			<version>1.0.1.RELEASE</version>
+			<version>${springframework.android.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.4.3</version>
+			<version>${fasterxml.jackson.core.version}</version>
+		</dependency>
+
+		<!-- Testing framework -->
+		<dependency>
+			<groupId>org.robolectric</groupId>
+			<artifactId>robolectric</artifactId>
+			<version>${robolectric.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
@@ -94,6 +113,9 @@
 					<groupId>com.jayway.maven.plugins.android.generation2</groupId>
 					<artifactId>android-maven-plugin</artifactId>
 					<version>${android-maven-plugin.version}</version>
+					<configuration>
+<!-- 						<extractDuplicates>true</extractDuplicates> -->
+					</configuration>
 					<extensions>true</extensions>
 				</plugin>
 			</plugins>
