--- a/splitemapp-android/AndroidManifest.xml
+++ b/splitemapp-android/AndroidManifest.xml
@@ -14,15 +14,19 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat">
         <activity 
-            android:name="com.splitemapp.android.activity.LoginActivity" 
+            android:name="com.splitemapp.android.screen.login.LoginActivity" 
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity 
+            android:name="com.splitemapp.android.screen.createaccount.CreateAccountActivity" 
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
