Updating string references Updating manifest to include new activities Adding new home activity

--- a/splitemapp-android/AndroidManifest.xml
+++ b/splitemapp-android/AndroidManifest.xml
@@ -28,6 +28,10 @@
             android:name="com.splitemapp.android.screen.createaccount.CreateAccountActivity" 
             android:screenOrientation="portrait">
         </activity>
+        <activity 
+            android:name="com.splitemapp.android.screen.home.HomeActivity" 
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
