Adding new screen to create new lists (fragment + activity) Adding new strings for the new screen Adding styles for the new screen Updating base fragment so it contains the getCurrentUser method, this will be useful for all screens Updating all fragments to use the inherited getCurrentUser method Adding dollar sign image Adding action menu for the create list screen

--- a/splitemapp-android/AndroidManifest.xml
+++ b/splitemapp-android/AndroidManifest.xml
@@ -32,6 +32,10 @@
             android:name="com.splitemapp.android.screen.home.HomeActivity" 
             android:screenOrientation="portrait">
         </activity>
+        <activity 
+            android:name="com.splitemapp.android.screen.createlist.CreateListActivity" 
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
