Adding new project screen which is called from the home screen Sending project id and current logged in user id in the intent from home screen to project screen Adding new required strings Adding old list item spinner Adding new list item user expense to show all the items in the expense list (still needs to be tested since there are currently no expenses in the database).

--- a/splitemapp-android/AndroidManifest.xml
+++ b/splitemapp-android/AndroidManifest.xml
@@ -36,6 +36,10 @@
             android:name="com.splitemapp.android.screen.createlist.CreateListActivity" 
             android:screenOrientation="portrait">
         </activity>
+        <activity 
+            android:name="com.splitemapp.android.screen.project.ProjectActivity" 
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
