--- a/splitemapp-android/AndroidManifest.xml
+++ b/splitemapp-android/AndroidManifest.xml
@@ -44,6 +44,10 @@
             android:name="com.splitemapp.android.screen.expense.ExpenseActivity" 
             android:screenOrientation="portrait">
         </activity>
+        <activity 
+            android:name="com.splitemapp.android.screen.addpeople.AddPeopleActivity" 
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
