--- a/splitemapp-android/AndroidManifest.xml
+++ b/splitemapp-android/AndroidManifest.xml
@@ -17,7 +17,8 @@
         android:theme="@style/Theme.AppCompat">
         <activity 
             android:name="com.splitemapp.android.screen.login.LoginActivity" 
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,7 +35,8 @@
         </activity>
         <activity 
             android:name="com.splitemapp.android.screen.createlist.CreateListActivity" 
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden">
         </activity>
         <activity 
             android:name="com.splitemapp.android.screen.project.ProjectActivity" 
