--- a/splitemapp-android/AndroidManifest.xml
+++ b/splitemapp-android/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
     
     <application
         android:allowBackup="true"
@@ -21,7 +22,6 @@
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -48,6 +48,10 @@
         </activity>
         <activity 
             android:name="com.splitemapp.android.screen.addpeople.AddPeopleActivity" 
+            android:screenOrientation="portrait">
+        </activity>
+        <activity 
+            android:name="com.splitemapp.android.screen.managecontacts.ManageContactsActivity" 
             android:screenOrientation="portrait">
         </activity>
     </application>
