--- a/splitemapp-android/AndroidManifest.xml
+++ b/splitemapp-android/AndroidManifest.xml
@@ -5,54 +5,58 @@
     android:versionName="0.0.1-SNAPSHOT" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
-    
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.AppCompat">
-        <activity 
-            android:name="com.splitemapp.android.screen.login.LoginActivity" 
+        android:theme="@style/Theme.AppCompat" >
+        <activity
+            android:name="com.splitemapp.android.screen.login.LoginActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden">
+            android:windowSoftInputMode="stateHidden" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity 
-            android:name="com.splitemapp.android.screen.createaccount.CreateAccountActivity" 
-            android:screenOrientation="portrait">
+        <activity
+            android:name="com.splitemapp.android.screen.createaccount.CreateAccountActivity"
+            android:screenOrientation="portrait" >
         </activity>
-        <activity 
-            android:name="com.splitemapp.android.screen.home.HomeActivity" 
-            android:screenOrientation="portrait">
+        <activity
+            android:name="com.splitemapp.android.screen.home.HomeActivity"
+            android:screenOrientation="portrait" >
         </activity>
-        <activity 
-            android:name="com.splitemapp.android.screen.createlist.CreateListActivity" 
+        <activity
+            android:name="com.splitemapp.android.screen.createlist.CreateListActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateHidden">
+            android:theme="@style/NoActionBarTheme"
+            android:windowSoftInputMode="stateHidden" >
         </activity>
-        <activity 
-            android:name="com.splitemapp.android.screen.project.ProjectActivity" 
-            android:screenOrientation="portrait">
+        <activity
+            android:name="com.splitemapp.android.screen.project.ProjectActivity"
+            android:screenOrientation="portrait" >
         </activity>
-        <activity 
-            android:name="com.splitemapp.android.screen.expense.ExpenseActivity" 
-            android:screenOrientation="portrait">
+        <activity
+            android:name="com.splitemapp.android.screen.expense.ExpenseActivity"
+            android:screenOrientation="portrait" >
         </activity>
-        <activity 
-            android:name="com.splitemapp.android.screen.addpeople.AddPeopleActivity" 
-            android:screenOrientation="portrait">
+        <activity
+            android:name="com.splitemapp.android.screen.addpeople.AddPeopleActivity"
+            android:theme="@style/NoActionBarTheme"
+            android:screenOrientation="portrait" >
         </activity>
-        <activity 
-            android:name="com.splitemapp.android.screen.managecontacts.ManageContactsActivity" 
-            android:screenOrientation="portrait">
+        <activity
+            android:name="com.splitemapp.android.screen.managecontacts.ManageContactsActivity"
+            android:theme="@style/NoActionBarTheme"
+            android:screenOrientation="portrait" >
         </activity>
     </application>
 
