--- a/splitemapp-android/AndroidManifest.xml
+++ b/splitemapp-android/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat" >
         <activity
-            android:name="com.splitemapp.android.screen.login.LoginActivity"
+            android:name="com.splitemapp.android.screen.welcome.WelcomeActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden" >
             <intent-filter>
@@ -25,6 +25,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.splitemapp.android.screen.login.LoginActivity"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="com.splitemapp.android.screen.createaccount.CreateAccountActivity"
@@ -50,13 +54,13 @@
         </activity>
         <activity
             android:name="com.splitemapp.android.screen.addpeople.AddPeopleActivity"
-            android:theme="@style/NoActionBarTheme"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:theme="@style/NoActionBarTheme" >
         </activity>
         <activity
             android:name="com.splitemapp.android.screen.managecontacts.ManageContactsActivity"
-            android:theme="@style/NoActionBarTheme"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:theme="@style/NoActionBarTheme" >
         </activity>
     </application>
 
