--- a/splitemapp-android/project.properties
+++ b/splitemapp-android/project.properties
@@ -11,7 +11,8 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-21
+target=Google Inc.:Google APIs:22
 android.library.reference.1=../appcompat
 android.library.reference.3=../recyclerview
 android.library.reference.2=../cardview
+android.library.reference.4=../design
