Some minor upadtes regarding how we reference image qualities Including the actual project cover image as avatar in the home screen's project list

--- a/splitemapp-android/project.properties
+++ b/splitemapp-android/project.properties
@@ -12,7 +12,7 @@
 
 # Project target.
 target=Google Inc.:Google APIs:22
-android.library.reference.1=..\\design
-android.library.reference.3=..\\cardview
-android.library.reference.2=..\\appcompat
-android.library.reference.4=..\\recyclerview
+android.library.reference.1=../appcompat
+android.library.reference.3=../design
+android.library.reference.2=../cardview
+android.library.reference.4=../recyclerview
