--- a/splitemapp-android/project.properties
+++ b/splitemapp-android/project.properties
@@ -16,3 +16,4 @@ android.library.reference.1=../appcompat
 android.library.reference.3=../design
 android.library.reference.2=../cardview
 android.library.reference.4=../recyclerview
+android.library.reference.5=../androidswipelayout
