Changing naming from Add People to Project Contacts Migrating from using ListView to RecyclerView

--- a/splitemapp-android/AndroidManifest.xml
+++ b/splitemapp-android/AndroidManifest.xml
@@ -46,7 +46,7 @@
             android:theme="@style/NoActionBarTheme" >
         </activity>
         <activity
-            android:name="com.splitemapp.android.screen.addpeople.AddPeopleActivity"
+            android:name="com.splitemapp.android.screen.projectcontacts.ProjectContactsActivity"
             android:screenOrientation="portrait"
             android:theme="@style/NoActionBarTheme" >
         </activity>
