Renaming action bar to blue toolbar Creating new transparent toolbar Adding new transparent toolbar to the project screen Adding new required images

--- a/splitemapp-android/AndroidManifest.xml
+++ b/splitemapp-android/AndroidManifest.xml
@@ -38,7 +38,8 @@
         </activity>
         <activity
             android:name="com.splitemapp.android.screen.project.ProjectActivity"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:theme="@style/NoActionBarTheme" >
         </activity>
         <activity
             android:name="com.splitemapp.android.screen.expense.ExpenseActivity"
