--- a/splitemapp-android/pom.xml
+++ b/splitemapp-android/pom.xml
@@ -117,6 +117,20 @@
 			<groupId>com.splitemapp</groupId>
 			<artifactId>splitemapp-commons</artifactId>
 			<version>${commons.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework</groupId>
+					<artifactId>spring-core</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.springframework</groupId>
+					<artifactId>spring-context</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.springframework</groupId>
+					<artifactId>spring-web</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 
