--- a/splitemapp-android/project.properties
+++ b/splitemapp-android/project.properties
@@ -11,10 +11,10 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=Google Inc.:Google APIs:22
+target=Google Inc.:Google APIs:23
 android.library.reference.1=../appcompat
 android.library.reference.3=../design
 android.library.reference.2=../cardview
 android.library.reference.4=../recyclerview
-android.library.reference.5=../androidswipelayout
-android.library.reference.6=../google-play-services_lib
+android.library.reference.5=../google-play-services_lib
+android.library.reference.6=../android-swipelayout
