SPLITEMAPP-42 Updating some naming and minor change in how we show the contacts in the manage contacts screen.

--- a/splitemapp-android/AndroidManifest.xml
+++ b/splitemapp-android/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:theme="@style/Theme.AppCompat" >
         
         <service
-            android:name="com.splitemapp.android.service.sync.SyncService">
+            android:name="com.splitemapp.android.service.SyncTablesService">
         </service>
 
         <!-- Android GCM START -->
