--- a/splitemapp-android/AndroidManifest.xml
+++ b/splitemapp-android/AndroidManifest.xml
@@ -87,7 +87,8 @@
         <activity
             android:name="com.splitemapp.android.screen.expense.ExpenseActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/NoActionBarTheme" >
+            android:theme="@style/NoActionBarTheme"
+            android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
             android:name="com.splitemapp.android.screen.projectcontacts.ProjectContactsActivity"
