--- a/splitemapp-android/AndroidManifest.xml
+++ b/splitemapp-android/AndroidManifest.xml
@@ -100,6 +100,12 @@
             android:screenOrientation="portrait"
             android:theme="@style/NoActionBarTheme" >
         </activity>
+        <activity
+            android:name="com.splitemapp.android.screen.settings.SettingsActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden"
+            android:theme="@style/NoActionBarTheme" >
+        </activity>
     </application>
 
 </manifest>
