SPLITEMAPP-62 Making the gcm token retrival process part of the task that pushed the user session Separating broadcast receiver into two: one for calling rest services and another one for UI interaction Updating some class names so that they better reflect their function Updating references to those classes

--- a/splitemapp-android/AndroidManifest.xml
+++ b/splitemapp-android/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:theme="@style/Theme.AppCompat" >
         
         <service
-            android:name="com.splitemapp.android.service.SyncTablesService">
+            android:name="com.splitemapp.android.service.BaseIntentService">
         </service>
 
         <!-- Android GCM START -->
