SPLITEMAPP-65 Adding new option in the project screen to display the balance (probably will change this with a new chart icon somewhere) Adding new activity to the android manifest Updating ExpenseGroupAdapter to load the recycler view appropriately Updating BalanceFragment to use the proper fragment with blue toolbar

--- a/splitemapp-android/AndroidManifest.xml
+++ b/splitemapp-android/AndroidManifest.xml
@@ -96,6 +96,11 @@
             android:theme="@style/NoActionBarTheme" >
         </activity>
         <activity
+            android:name="com.splitemapp.android.screen.balance.BalanceActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/NoActionBarTheme" >
+        </activity>
+        <activity
             android:name="com.splitemapp.android.screen.managecontacts.ManageContactsActivity"
             android:screenOrientation="portrait"
             android:theme="@style/NoActionBarTheme" >
