SPLITEMAPP-58 Adding new dialogs for the ask a question service Adding a new Task for calling the questions service Hiding the FAQ button for now, since we will wait to have some questions to show that one Adding some new images for the new dialogs Refactoring the filter dialog names to start with the "dialog" keyword Adding new method to the ResfulFragment class to send questions

--- a/splitemapp-android/pom.xml
+++ b/splitemapp-android/pom.xml
@@ -179,6 +179,10 @@
 					<groupId>org.springframework</groupId>
 					<artifactId>spring-web</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>javax.mail</groupId>
+					<artifactId>mail</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 	</dependencies>
