--- a/splitemapp-android/pom.xml
+++ b/splitemapp-android/pom.xml
@@ -183,6 +183,10 @@
 					<groupId>javax.mail</groupId>
 					<artifactId>mail</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>org.apache.velocity</groupId>
+					<artifactId>velocity</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 	</dependencies>
