SPLITEMAPP-91 Arreglando problemas de permisos para acceder a contactos en la version Marshmellow

--- a/SplitemApp/app/build.gradle
+++ b/SplitemApp/app/build.gradle
@@ -23,6 +23,7 @@ android {
         pickFirst  'META-INF/spring.tooling'
         pickFirst  'META-INF/notice.txt'
         pickFirst  'META-INF/license.txt'
+        pickFirst  'META-INF/LICENSE'
     }
 }
 
